[metadata]
name = STTSilence
version = 0.0.3
author = Stefan Janse van Rensburg
author_email = sjansevanrensburg@gmail.com
description = A package to speed up the silent parts in a video.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sjvrensburg/STTSilence
project_urls =
    Bug Tracker = https://github.com/sjvrensburg/STTSilence/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src